deployment-template.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-depl
spec:
  replicas: 2
  selector:
    matchLabels:
      app: test
  template:
    metadata:
      labels:
        app: test
    spec:
      containers:
        - name: test
          image: v12hal/sakhi-api:v5
---
apiVersion: v1
kind: Service
metadata:
  name: test-srv
spec:
  selector:
    app: test
  ports:
    - name: test
      protocol: TCP
      port: 8000
      targetPort: 8000
