deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-depl
  labels:
    app: test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test
  template:
    metadata:
      labels:
        app: test
    spec:
      containers:
        - name: test
          image: v12hal/sakhi-api:v5
          ports:
          - containerPort: 8000
          securityContext:
            privileged: true
---
apiVersion: v1
kind: Service
metadata:
  name: test-srv
spec:
  selector:
    app: test
  ports:
  - name: test
    protocol: TCP
    port: 8000
    targetPort: 8000
  type: ClusterIP
