marqoai-2305.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: marqo-deployment
  labels:
    app: marqo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: marqo
  template:
    metadata:
      labels:
        app: marqo
    spec:
      containers:
      - name: marqo-container
        image: marqoai/marqo:1.5.1
        ports:
        - containerPort: 8882
        securityContext:
          privileged: true
---
apiVersion: v1
kind: Service
metadata:
  name: marqo-service
  labels:
    app: marqo
spec:
  selector:
    app: marqo
  ports:
  - protocol: TCP
    port: 8882
    targetPort: 8882
  type: ClusterIP
