telegram-deployment-template.yaml
apiVersion: apps/v1  
kind: Deployment  
metadata:  
  name: telegram-bot-deployment  
spec:  
  replicas: 1  
  selector:  
    matchLabels:  
      app: telegram-bot  
  template:  
    metadata:  
      labels:  
        app: telegram-bot  
    spec:  
      containers:  
        - name: telegram-bot  
          image: v12hal/unified-telegram:v1  
---
apiVersion: v1  
kind: Service  
metadata:  
  name: telegram-bot-service  
spec:  
  selector:  
    app: telegram-bot  
  ports:  
    - protocol: TCP  
      port: 8000  
      targetPort: 8000
